<resources>
    <string name="app_name">Freshers Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">Android Developer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_job_profiles">Job Profiles</string>
    <string name="menu_update_profile">View Profile</string>
    <string name="menu_placement_statistics">Placement Statistics</string>
    <string name="menu_tnp_details">TPO Details</string>
    <string name="menu_assistant_tpo">Assistant TPO\'s</string>
    <string name="menu_group_chat">Group Chat</string>
    <string name="menu_our_team">Our Team</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group_chat_photo">GroupChatPhoto</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>